@@ -53,6 +53,45 @@ DECLARE_INTERFACE_(IObjectWithSite,IUnknown)
 	STDMETHOD(GetSite)(THIS_ REFIID, void**) PURE;
 };
 
+EXTERN_C const IID IID_IOleInPlaceSiteWindowless;
+#undef INTERFACE
+#define INTERFACE IOleInPlaceSiteWindowless
+DECLARE_INTERFACE_(IOleInPlaceSiteWindowless,IOleInPlaceSiteEx)
+{
+	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
+	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
+	STDMETHOD_(ULONG,Release)(THIS) PURE;
+	STDMETHOD(GetWindow)(THIS_ HWND*) PURE;
+	STDMETHOD(ContextSensitiveHelp)(THIS_ BOOL) PURE;
+	STDMETHOD(CanInPlaceActivate)(THIS) PURE;
+	STDMETHOD(OnInPlaceActivate)(THIS) PURE;
+	STDMETHOD(OnUIActivate)(THIS) PURE;
+	STDMETHOD(GetWindowContext)(THIS_ IOleInPlaceFrame**,IOleInPlaceUIWindow**,LPRECT,LPRECT,LPOLEINPLACEFRAMEINFO) PURE;
+	STDMETHOD(Scroll)(THIS_ SIZE) PURE;
+	STDMETHOD(OnUIDeactivate)(THIS_ BOOL) PURE;
+	STDMETHOD(OnInPlaceDeactivate)(THIS) PURE;
+	STDMETHOD(DiscardUndoState)(THIS) PURE;
+	STDMETHOD(DeactivateAndUndo)(THIS) PURE;
+	STDMETHOD(OnPosRectChange)(THIS_ LPCRECT) PURE;
+
+	STDMETHOD(OnInPlaceActivateEx)(THIS_ BOOL*,DWORD) PURE;
+	STDMETHOD(OnInPlaceDeactivateEx)(THIS_ BOOL) PURE;
+	STDMETHOD(RequestUIActivate)(THIS) PURE;
+
+	STDMETHOD(CanWindowlessActivate)(THIS) PURE;
+	STDMETHOD(GetCapture)(THIS) PURE;
+	STDMETHOD(SetCapture)(THIS_ BOOL) PURE;
+	STDMETHOD(GetFocus)(THIS) PURE;
+	STDMETHOD(SetFocus)(THIS_ BOOL) PURE;
+	STDMETHOD(GetDC)(THIS_ LPCRECT,DWORD,HDC*) PURE;
+	STDMETHOD(ReleaseDC)(THIS_ HDC) PURE;
+	STDMETHOD(InvalidateRect)(THIS_ LPCRECT,BOOL) PURE;
+	STDMETHOD(InvalidateRgn)(THIS_ HRGN,BOOL) PURE;
+	STDMETHOD(ScrollRect)(THIS_ INT,INT,LPCRECT,LPCRECT) PURE;
+	STDMETHOD(AdjustRect)(THIS_ LPCRECT) PURE;
+	STDMETHOD(OnDefWindowMessage)(THIS_ UINT,WPARAM,LPARAM,LRESULT*) PURE;
+};
+
 #ifdef __cplusplus
 }
 #endif
