@@ -171,6 +171,10 @@ extern "C" {
 #define DISPID_CAPTION (-518)
 #define DISPID_BORDERVISIBLE (-519)
 #define DISPID_APPEARANCE	(-520)
+#define DISPID_MOUSEPOINTER	(-521)
+#define DISPID_MOUSEICON	(-522)
+#define DISPID_PICTURE	(-523)
+#define DISPID_VALID	(-524)
 #define DISPID_REFRESH (-550)
 #define DISPID_DOCLICK (-551)
 #define DISPID_ABOUTBOX (-552)
@@ -199,6 +203,12 @@ extern "C" {
 #define DISPID_AMBIENT_SUPPORTSMNEMONICS (-714)
 #define DISPID_AMBIENT_AUTOCLIP (-715)
 #define DISPID_AMBIENT_APPEARANCE	(-716)
+#define DISPID_AMBIENT_CODEPAGE	(-725)
+#define DISPID_AMBIENT_PALETTE	(-726)
+#define DISPID_AMBIENT_CHARSET	(-727)
+#define DISPID_AMBIENT_RIGHTTOLEFT	(-732)
+#define DISPID_AMBIENT_TOPTOBOTTOM	(-733)
+
 #define DISPID_FONT_NAME 0
 #define DISPID_FONT_SIZE 2
 #define DISPID_FONT_BOLD 3
