@@ -45,6 +45,7 @@ typedef enum tagUSERCLASSTYPE {
 	USERCLASSTYPE_SHORT,
 	USERCLASSTYPE_APPNAME
 } USERCLASSTYPE;
+
 #ifdef __GNUC__
 __extension__  /* IS0 C says enums limited to range of int */ 
 #endif
@@ -162,7 +163,7 @@ DECLARE_INTERFACE_(IOleObject,IUnknown)
 	STDMETHOD(Update)(THIS) PURE;
 	STDMETHOD(IsUpToDate)(THIS) PURE;
 	STDMETHOD(GetUserClassID)(THIS_ LPCLSID) PURE;
-	STDMETHOD(GetUserType)(THIS_ DWORD,LPOLESTR) PURE;
+	STDMETHOD(GetUserType)(THIS_ DWORD,LPOLESTR*) PURE;
 	STDMETHOD(SetExtent)(THIS_ DWORD,SIZEL*) PURE;
 	STDMETHOD(GetExtent)(THIS_ DWORD,SIZEL*) PURE;
 	STDMETHOD(Advise)(THIS_ LPADVISESINK,PDWORD) PURE;
@@ -350,7 +351,7 @@ DECLARE_INTERFACE_(IViewObject2,IUnknown)
 	STDMETHOD(Unfreeze)(THIS_ DWORD) PURE;
 	STDMETHOD(SetAdvise)(THIS_ DWORD,DWORD,IAdviseSink*) PURE;
 	STDMETHOD(GetAdvise)(THIS_ PDWORD,PDWORD,IAdviseSink**) PURE;
-	STDMETHOD(GetExtent)(THIS_ DWORD,DWORD,DVTARGETDEVICE*,LPSIZEL) PURE;
+	STDMETHOD(GetExtent)(THIS_ DWORD,LONG,DVTARGETDEVICE*,LPSIZEL) PURE;
 };
 
 
